# QCefView

./: .clang-format  .editorconfig  .gitignore  .gitmodules  404.html  CMakeLists.txt  CONTRIBUTING.md  QtConfig.cmake  generate-linux-proj-osr.sh  generate-linux-proj.sh  generate-linux-x86.sh  generate-linux-x86_64.sh  generate-mac-arm64.sh  generate-mac-proj-osr.sh  generate-mac-proj.sh  generate-mac-x86_64.sh  generate-win-arm64.bat  generate-win-proj-osr.bat  generate-win-proj.bat  generate-win-x86.bat  generate-win-x86_64.bat  index.html  readme.md  sitemap.xml
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug-report--报告你发现的缺陷-.md  bug_report.md  config.yml  feature-request--增加新特性需求-.md  feature-request--提议你想增加的功能-.md  feature_request.md
.github/workflows/: build-linux-x86_64.yml  build-linux.yml  build-macos-x86_64.yml  build-macos.yml  build-windows-x86_64.yml  build-windows.yml  create-release.yml
assets/css/: styles.0ba8f15d.css
assets/js/: 03e998e5.704d7854.js  0e384e19.c80f8566.js  14eb3368.58c12be0.js  17896441.185fc995.js  1d440ea2.0717cd24.js  20ce576f.45205691.js  2d90a07c.48210900.js  (+21 more)
cmake/: CefViewCoreConfig.cmake  QtConfig.cmake
core/: CMakeLists.txt
docs/: 00-_introduction_8md.html  01-_build_and_config_8md.html  02-_first_project_8md.html  03-_resource_loading_8md.html  04-_interoperability_8md.html  05-_rendering_8md.html  06-_web_a_p_is_8md.html  404.html  _cef_version_8h.html  _cef_version_8h.js  _q_cef_config_8h.html  _q_cef_config_8h.js  _q_cef_context_8h.html  _q_cef_context_8h.js  _q_cef_download_item_8h.html  _q_cef_download_item_8h.js  _q_cef_event_8h.html  _q_cef_event_8h.js  _q_cef_query_8h.html  _q_cef_query_8h.js  _q_cef_setting_8h.html  _q_cef_setting_8h.js  _q_cef_view_8h.html  _q_cef_view_8h.js  _q_cef_view__global_8h.html  _q_cef_view__global_8h.js  annotated.html  annotated_dup.js  class_q_cef_config-members.html  class_q_cef_config.html  class_q_cef_config.js  class_q_cef_context-members.html  class_q_cef_context.html  class_q_cef_context.js  class_q_cef_download_item-members.html  class_q_cef_download_item.html  class_q_cef_download_item.js  class_q_cef_event-members.html  class_q_cef_event.html  class_q_cef_event.js  (+90 more)
example/QCefViewTest/: CMakeLists.txt  CefViewWidget.cpp  CefViewWidget.h  DownloadManager.cpp  DownloadManager.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  QCefViewTestPage.html  index.in.html  main.cpp  tutorial.in.html
example/QCefViewTest/linux/: CefViewWidget_linux.cpp
example/QCefViewTest/mac/: CefViewWidget_mac.mm  Info.plist  MainWindow_mac.mm
example/QCefViewTest/websrc/: iframe.in.html  left.in.html  right.in.html
example/QCefViewTest/win/: CefViewWidget_win.cpp
include/: CefVersion.h  QCef.h  QCefBrowserSetting.h  QCefConfig.h  QCefContext.h  QCefDownloadItem.h  QCefEvent.h  QCefJsCallback.h  QCefQuery.h  QCefSetting.h  QCefView.h  QCefView_global.h  QCefView_global.h.in
src/: CMakeLists.txt  QCef.cpp  QCefBrowserSetting.cpp  QCefConfig.cpp  QCefContext.cpp  QCefDownloadItem.cpp  QCefEvent.cpp  QCefJsCallback.cpp  QCefQuery.cpp  QCefSetting.cpp  QCefView.cpp  QCefView_global.h.in
src/details/: CCefAppDelegate.cpp  CCefAppDelegate.h  CCefClientDelegate _DownloadHandler.cpp  CCefClientDelegate.cpp  CCefClientDelegate.h  CCefClientDelegate_ContextMenuHandler.cpp  CCefClientDelegate_DialogHandler.cpp  CCefClientDelegate_DisplayHandler.cpp  CCefClientDelegate_DownloadHandler.cpp  CCefClientDelegate_DragHandler.cpp  CCefClientDelegate_FocusHandler.cpp  CCefClientDelegate_JSDialogHandler.cpp  CCefClientDelegate_KeyboardHandler.cpp  CCefClientDelegate_LifeSpanHandler.cpp  CCefClientDelegate_LoadHandler.cpp  CCefClientDelegate_RenderHandler.cpp  CCefClientDelegate_ResourceRequestHandler.cpp  CCefDelegate.cpp  CCefDelegate.h  CCefHandlerDelegate.cpp  CCefHandlerDelegate.h  CCefManager.cpp  CCefManager.h  CCefSetting.cpp  CCefSetting.h  CommonUtils.h  QCefConfigPrivate.cpp  QCefConfigPrivate.h  QCefContextPrivate.cpp  QCefContextPrivate.h  QCefDownloadItemPrivate.cpp  QCefDownloadItemPrivate.h  QCefEventPrivate.cpp  QCefEventPrivate.h  QCefQueryPrivate.cpp  QCefQueryPrivate.h  QCefSettingPrivate.cpp  QCefSettingPrivate.h  QCefViewPrivate.cpp  QCefViewPrivate.h  (+3 more)
src/details/handler/: CCefClientDelegate_ContextMenuHandler.cpp  CCefClientDelegate_DialogHandler.cpp  CCefClientDelegate_DisplayHandler.cpp  CCefClientDelegate_DownloadHandler.cpp  CCefClientDelegate_DragHandler.cpp  CCefClientDelegate_FocusHandler.cpp  CCefClientDelegate_JSDialogHandler.cpp  CCefClientDelegate_KeyboardHandler.cpp  CCefClientDelegate_LifeSpanHandler.cpp  CCefClientDelegate_LoadHandler.cpp  CCefClientDelegate_RenderHandler.cpp
src/details/render/: CefViewRendererFactory.cpp  CefViewRendererFactory.h  ICefViewRenderer.h
src/details/render/hardware/: CefViewHardwareRenderer.cpp  CefViewHardwareRenderer.h
src/details/render/software/: CefViewSoftwareRenderer.cpp  CefViewSoftwareRenderer.h  QtSoftwareRenderer.cpp  QtSoftwareRenderer.h
src/details/utils/: CommonUtils.cpp  CommonUtils.h  CursorUtils.cpp  CursorUtils.h  DragAndDropUtils.cpp  DragAndDropUtils.h  KeyboardUtils.cpp  KeyboardUtils.h  MenuBuilder.cpp  MenuBuilder.h  ValueConvertor.cpp  ValueConvertor.h
src/linux/details/: CCefManager_linux.cpp  CCefSetting_linux.cpp  QCefContextPrivate_linux.cpp  QCefViewPrivate_linux.cpp
src/linux/details/render/hardware/: OpenGLRenderBackend.cpp  OpenGLRenderBackend.h
src/mac/: Info.plist
src/mac/details/: CCefManager_mac.mm  CCefSetting_mac.mm  QCefContextPrivate_mac.mm
src/mac/details/render/hardware/: MetalRenderBackend.h  MetalRenderBackend.mm
src/win/details/: CCefManager_win.cpp  CCefSetting_win.cpp  QCefContextPrivate_win.cpp  QCefViewPrivate_win.cpp
src/win/details/render/hardware/: DX11RenderBackend.cpp  DX11RenderBackend.h
test/QCefViewTest/: CMakeLists.txt  QCefViewTest.manifest  QCefViewTestPage.html  customcefview.cpp  customcefview.h  main.cpp  qcefviewtest.cpp  qcefviewtest.h  qcefviewtest.qrc  qcefviewtest.ui
test/QCefViewTest/mac/: Info.plist
zh/: 404.html  index.html  sitemap.xml
(+265 files in other folders)
